# vkBasalt-reloaded

./: README.md  build_vkbasalt_native_optimized.fish  build_vkbasalt_native_optimized.sh  meson.build
config/: vkBasalt.conf
src/: basalt.cpp  command_buffer.cpp  config.cpp  descriptor_set.cpp  descriptor_set.hpp  effect_clarity.cpp  effect_clarity.hpp  effect_claritycas.cpp  effect_claritycas.hpp  effect_clarityrcas.cpp  effect_clarityrcas.hpp  effect_crystalclear.cpp  effect_crystalclear.hpp  effect_dls.cpp  effect_fxaa.cpp  effect_lut.cpp  effect_reshade.cpp  effect_simple.cpp  effect_simple.hpp  effect_smaa.cpp  effect_smaa.hpp  effect_transfer.cpp  fake_swapchain.cpp  fake_swapchain.hpp  framebuffer.cpp  framebuffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image_view.cpp  image_view.hpp  keyboard_input.cpp  keyboard_input_wayland.cpp  keyboard_input_wayland.hpp  logical_swapchain.hpp  lut_cube.cpp  meson.build  renderpass.cpp  renderpass.hpp  reshade_uniforms.cpp  (+2 more)
src/reshade/: effect_symbol_table_intrinsics.inl  meson.build
src/shader/: cas.frag.glsl  clarity.frag.glsl  claritycas.frag.glsl  clarityrcas.frag.glsl  crystalclear.frag.glsl  meson.build  smaa.h  smaa_settings.h
